// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

  option go_package = "proto/.";

package api;

// The greeting service definition.
service FileManager {
  rpc CreateFile (CreateRequest) returns (CreateReply) {}
  rpc IsFileExists (CheckRequest) returns (CheckReply) {}
  rpc WriteToFile (WriteRequest) returns (WriteReply) {}
  rpc ReadFromFile (ReadRequest) returns (ReadReply) {}
}
message CreateRequest {
  string Path = 1;
  string FileName = 2;
}

message CreateReply {
  string message = 1;
}

message CheckRequest {
  string Path = 1;
  string FileName = 2;
}

message CheckReply {
  bool message = 1;
}

message WriteRequest {
  string Path = 1;
  string FileName = 2;
  string Data = 3;
}

message WriteReply {
  string message = 1;
}

message ReadRequest {
  string Path = 1;
  string FileName = 2;
}

message ReadReply {
  string message = 1;
}